[package]
name = "freq-det"
version = "0.3.1"
edition = "2021"
license = "MIT OR Apache-2.0"
description = "Detecting the most prominent frequency in samples using FFT"
categories = ["multimedia::audio"]
keywords = ["sound", "audio", "frequency", "FFT"]
repository = "https://github.com/samoylovfp/freq-det"

[dependencies]
rustfft = "6.2.0"
thiserror = "1.0.61"

[dev-dependencies]
cpal = "0.15.3"
